--- a/index.html
+++ b/index.html
@@ -1,20 +1,86 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
-    <meta name="author" content="">
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="description" content="" />
+    <meta name="author" content="" />
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <script src="js/application.js"></script>
 
-    <link href="css/bootstrap.min.css" rel="stylesheet">
-    <link href="css/custom.css" rel="stylesheet">
+    <link href="css/bootstrap.min.css" rel="stylesheet" />
+    <link href="css/custom.css" rel="stylesheet" />
   </head>
   <body>
+    <div class="container">
+      <h1>Shopping Cart</h1>
+      <table class="table">
+        <thead>
+          <tr>
+            <th>Item</th>
+            <th>Price</th>
+            <th>Qty</th>
+            <th>Item Total</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td>Milk</td>
+            <td>6.99</td>
+            <td><input type="number" /></td>
+            <td>-</td>
+          </tr>
+          <tr>
+            <td>Cheese</td>
+            <td>4.59</td>
+            <td><input type="number" /></td>
+            <td>-</td>
+          </tr>
+          <tr>
+            <td>Eggs (dozen)</td>
+            <td>6.59</td>
+            <td><input type="number" /></td>
+            <td>-</td>
+          </tr>
+          <tr>
+            <td>Filet Mignon</td>
+            <td>18.50</td>
+            <td><input type="number" /></td>
+            <td>-</td>
+          </tr>
+          <tr>
+            <td>Apple</td>
+            <td>1.15</td>
+            <td><input type="number" /></td>
+            <td>-</td>
+          </tr>
+          <tr>
+            <td>Banana</td>
+            <td>1.50</td>
+            <td><input type="number" /></td>
+            <td>-</td>
+          </tr>
+          <tr>
+            <td>Chocolate Ice Cream</td>
+            <td>8.50</td>
+            <td><input type="number" /></td>
+            <td>-</td>
+          </tr>
+          <tr>
+            <td><input type="text"></td>
+            <td><input class="price"></td>
+            <td><button id="add" class="btn">Add</button></td>
+            <td>-</td>
+          </tr>
+        </tbody>
+      </table>
 
+      <div id="total">
+        <h2>Total Price: <span>0</span></h2>
+      </div>
+    </div>
   </body>
 </html>
