working price calculations

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 
     <link href="css/bootstrap.min.css" rel="stylesheet" />
     <link href="css/custom.css" rel="stylesheet" />
+    <title>Shopping Cart</title>
   </head>
   <body>
     <div class="container">
@@ -30,44 +31,44 @@
           <tr>
             <td>Milk</td>
             <td>6.99</td>
-            <td><input type="number" /></td>
-            <td>-</td>
+            <td><input type="number" min="0"/></td>
+            <td class="subtotal">-</td>
           </tr>
           <tr>
             <td>Cheese</td>
             <td>4.59</td>
-            <td><input type="number" /></td>
-            <td>-</td>
+            <td><input type="number" min="0"/></td>
+            <td class="subtotal">-</td>
           </tr>
           <tr>
             <td>Eggs (dozen)</td>
             <td>6.59</td>
-            <td><input type="number" /></td>
-            <td>-</td>
+            <td><input type="number" min="0"/></td>
+            <td class="subtotal">-</td>
           </tr>
           <tr>
             <td>Filet Mignon</td>
             <td>18.50</td>
-            <td><input type="number" /></td>
-            <td>-</td>
+            <td><input type="number" min="0"/></td>
+            <td class="subtotal">-</td>
           </tr>
           <tr>
             <td>Apple</td>
             <td>1.15</td>
-            <td><input type="number" /></td>
-            <td>-</td>
+            <td><input type="number" min="0"/></td>
+            <td class="subtotal">-</td>
           </tr>
           <tr>
             <td>Banana</td>
             <td>1.50</td>
-            <td><input type="number" /></td>
-            <td>-</td>
+            <td><input type="number" min="0"/></td>
+            <td class="subtotal">-</td>
           </tr>
           <tr>
             <td>Chocolate Ice Cream</td>
             <td>8.50</td>
-            <td><input type="number" /></td>
-            <td>-</td>
+            <td><input type="number" min="0"/></td>
+            <td class="subtotal">-</td>
           </tr>
           <tr>
             <td><input type="text"></td>
