added js to remove item

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <script src="js/application.js"></script>
 
     <link href="css/bootstrap.min.css" rel="stylesheet" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css" integrity="sha512-HK5fgLBL+xu6dm/Ii3z4xhlSUyZgTT9tuc/hSrtw6uzJOvgRr2a9jyxxT1ely+B+xFAmJKVSTbpM/CuL7qxO8w==" crossorigin="anonymous" />
     <link href="css/custom.css" rel="stylesheet" />
     <title>Shopping Cart</title>
   </head>
@@ -33,42 +34,49 @@
             <td>6.99</td>
             <td><input type="number" min="0"/></td>
             <td class="subtotal">-</td>
+            <td><span class="fas fa-trash remove"></span></td>
           </tr>
           <tr>
             <td>Cheese</td>
             <td>4.59</td>
             <td><input type="number" min="0"/></td>
             <td class="subtotal">-</td>
+            <td><span class="fas fa-trash remove"></span></td>
           </tr>
           <tr>
             <td>Eggs (dozen)</td>
             <td>6.59</td>
             <td><input type="number" min="0"/></td>
             <td class="subtotal">-</td>
+            <td><span class="fas fa-trash remove"></span></td>
           </tr>
           <tr>
             <td>Filet Mignon</td>
             <td>18.50</td>
             <td><input type="number" min="0"/></td>
             <td class="subtotal">-</td>
+            <td><span class="fas fa-trash remove"></span></td>
           </tr>
           <tr>
             <td>Apple</td>
             <td>1.15</td>
             <td><input type="number" min="0"/></td>
             <td class="subtotal">-</td>
+            <td><span class="fas fa-trash remove"></span></td>
           </tr>
           <tr>
             <td>Banana</td>
             <td>1.50</td>
             <td><input type="number" min="0"/></td>
             <td class="subtotal">-</td>
+            <td><span class="fas fa-trash remove"></span></td>
           </tr>
           <tr>
             <td>Chocolate Ice Cream</td>
             <td>8.50</td>
             <td><input type="number" min="0"/></td>
             <td class="subtotal">-</td>
+            <td><span class="fas fa-trash remove"></span></td>
           </tr>
           <!-- <tr>
             <td><input class="item" type="text"></td>
